# math_package_project

./: .gitignore  README.md  auto-deploy.sh  multi-line-comments.sh
000-xyz/: .zshrc  cat-1.sh  cat-2.sh  cat-3.sh  ifconfig.txt  ip-filter.sh  multi-line-comments.sh  os-platform.py  readme.md  ternary-operator.py
python_package/: LICENSE  README.md  build.sh  pyproject.toml  upload.sh
python_package/src/math_package_xgqfrms/: math.py
python_package/tests/: demo.py  test.py
